istio-gw.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.aks-npe.trustbase.vn"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.aks-npe.trustbase.vn"
    tls:
      credentialName: gw-credential
      mode: SIMPLE
