nifi-vs.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: "nifi-release-vs"
spec:
  hosts:
    - "nifi-release.aks-npe.trustbase.vn"
  gateways:
    - istio-system/ingressgateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: "nifi-release.nifi-demo.svc.cluster.local"
        port:
          number: 8443
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: "nifi-release-dst-rule"
spec:
  exportTo:
  - "istio-system"
  host: nifi-release.nifi-demo.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
    tls:
      mode: SIMPLE
